        - User.get* - Added a few missing getters.
    * Changed methods:
        - DocumentService.saveChanges(Document) - Throws SaveException instead of MaxCategoriesOfTypeExceededException.
        - TextDocument.setInclude(int,TextDocument) - Now requires you to call DocumentService.saveChanges() afterwards.
        - UserService.addNewRole(String) - Returns the new role.
    * Deprecated methods:
        - Document.setPermissionSetForRole(String,int) - Use Document.setPermissionSetIdForRole(Role,int).
        - User.getRoleNames() - Use User.getRoles()
        - User.hasRole(String) - Use User.hasRole(Role)
        - UserService.deleteRole(String) - Use UserService.deleteRole(Role)
        - UserService.getAllUserWithRole(String) - Use UserService.getAllUsersWithRole(Role)
        - UserService.getRoleNames(User) - Use User.getRoles()
        - UserService.getAllRolesNames() - Use UserService.getAllRoles()
        - UserService.setUserRoles(User,String[]) - Use User.setRoles(Role[])
        - UserService.addNewRole(String) - Use UserService.createNewRole(String) and UserService.saveRole(Role)
    * Removed methods:
        - DocumentService.createAndSaveNewTextDocument(Document) - Use DocumentService.createNewTextDocument() and
            DocumentService.saveChanges(Document)
        - DocumentService.createAndSaveNewUrlDocument(Document) - Use DocumentService.createNewUrlDocument() and
            DocumentService.saveChanges(Document)

    Of interest to developers:

    * Unit tests are now enabled in the build by default. (Bug 2664)
    * Target "copy-web" in an addon "build.xml" is now run
      when running the "web"-target in the main "build.xml". (Bug 2674)
    * Use jsp for "edit text" page. (Bug 2549)
    * Added a unique index on column "login_name" in table "users". (Bug 2663)
    * Compileable with java 1.5. (Bug 2687)
    * Updated jars to the latest versions, and made sure all have understandable names with version numbers. (Bug 2686)